# WydarzeniaMR

./: .env  .env.docker  .gitignore  DesignProposal.md  Dockerfile.backend  Dockerfile.worker  README.md  build.py  docker-compose.yaml  entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2a95ff2d4b21_next_change.py  529dcb5306a1_initial_schema.py  ac622a9f2d71_add_new_model.py  c693a40b83a5_initial_schema.py
app/: conf.py  dramatiq_worker.py  index.rst  logger.py  main.py
app/backend/: auth_service.py  comment_service.py  event_invitation_service.py  event_pass_service.py  event_service.py  notification_service.py  participations_service.py  user_service.py
app/backend/tasks/: tasks.py
app/database/: session.py
app/database/models/: auth.py  comment.py  event.py  event_invitation.py  event_pass.py  notifications.py  participations.py  user.py
app/docs/: conf.py  index.rst
app/docs/source/: app.backend.rst  app.database.models.rst  app.database.rst  app.rst
app/frontend/: Dockerfile.frontend  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/routes/: auth_routes.py  comment_routes.py  event_routes.py  invites_routes.py  notification_routes.py  participations_routes.py  passes_routes.py  user_routes.py
config/: logger_config.json
docs/: DesignProposal.md  wiki.md
src/: logger.py  main.py
tests/: conftest.py
tests/backend/: test_auth_routes.py  test_comment_routes.py  test_event_pass_routes.py  test_event_routes.py  test_event_service.py  test_invites_routes.py  test_participations_routes.py  test_user_routes.py
(+79 files in other folders)
