[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend service"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Your Team" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "psycopg2",
    "python-dotenv",
    "redis",
    "PyJWT",
    "pydantic[email]",
    "passlib",
    "python-multipart",
    "argon2-cffi",
    "dramatiq",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "hypothesis",
]

dev = [
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ----------------------
# Pytest
# ----------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

# ----------------------
# Coverage (optional, future-ready)
# ----------------------
[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true